# service-bus-explorer-tui

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: add-operation.md  add-ui-panel.md  sb-rest-client.md  security-check.md
.claude/skills/: add-keybinding.md  add-modal.md  code-review.md  rust-check.md
.github/: dependabot.yml
.github/skills/add-keybinding/: SKILL.md
.github/skills/add-modal/: SKILL.md
.github/skills/add-operation/: SKILL.md
.github/skills/add-ui-panel/: SKILL.md
.github/skills/sb-rest-client/: SKILL.md
.github/workflows/: ci.yml  release.yml
chocolatey/: service-bus-explorer-tui.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
src/: app.rs  config.rs  event.rs  event_modal.rs  main.rs
src/client/: auth.rs  data_plane.rs  entity_path.rs  management.rs  mod.rs  models.rs  resource_manager.rs
src/ui/: detail.rs  help.rs  messages.rs  modals.rs  sanitize.rs  status_bar.rs
tests/emulator/: .env  config.json
